--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Public blog with admin panel",
     "main": "server.js",
     "scripts": {
-        "start": "node server.js",
+        "start": "node database/init.js && node server.js",
         "dev": "nodemon server.js",
         "init-db": "node database/init.js"
     },
