--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "Public blog with admin panel",
     "main": "server.js",
     "scripts": {
+        "build": "echo 'Build step not required'",
         "start": "node database/init.js && node server.js",
         "dev": "nodemon server.js",
         "init-db": "node database/init.js"
