--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "server.js",
     "scripts": {
         "build": "echo 'Build step not required'",
-        "start": "node database/init.js && node server.js",
+        "start": "node server.js",
         "dev": "nodemon server.js",
         "init-db": "node database/init.js"
     },
